# PyAutoArray

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  PLAN.md  README.md  README.rst  eden.ini  optional_requirements.txt  pyproject.toml  readthedocs.yml  release.sh  release_wsl.sh  requirements.txt  requirements_build.txt  setup.py  to_do_list
.github/: copilot-instructions.md
.github/workflows/: main.yml
autoarray/: __init__.py  aa_new.py  abstract_ndarray.py  conf.py  convolution.py  decorator_util.py  exc.py  fixtures.py  geometry.py  grids.py  mask.py  mock.py  numba_util.py  numpy_wrapper.py  preloads.py  scaled_array.py  settings.py  type.py  types.py
autoarray/arrays/: grids.py  mask.py  scaled_array.py
autoarray/config/: general.ini  general.yaml  grids.yaml  logging.yaml  visualize.yaml
autoarray/data/: abstract_data.py  data_converter.py  imaging.py  interferometer.py  uv_plane.py
autoarray/dataset/: abstract_dataset.py  data_converter.py  dataset_model.py  grids.py  imaging.py  interferometer.py  masked_dataset.py  model.py  over_sampling.py  preprocess.py
autoarray/fit/: __init__.py  fit.py  fit_data.py  fit_dataset.py  fit_imaging.py  fit_interferometer.py  fit_util.py  masked_data.py
autoarray/geometry/: abstract_2d.py  geometry_1d.py  geometry_2d.py  geometry_2d_irregular.py  geometry_util.py
autoarray/instruments/: __init__.py  acs.py  euclid.py
autoarray/inversion/: convolver.py  inversion_util.py  inversions.py  linear_obj.py  linear_object.py  mapper_util.py  mappers.py  pixelization.py  pixelization_util.py  (+3 more)
docs/: conf.py
files/: eden.ini  release.sh  to_do_list
test_autoarray/: __init__.py  conftest.py  mock.py  test_decorators.py  test_jax_changes.py  test_jax_pytree.py  test_preloads.py
(+1536 files in other folders)
