[build-system]
requires = ["setuptools>=79.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoarray"
dynamic = ["version"]
  description="PyAuto Data Structures"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "James Nightingale", email = "James.Nightingale@newcastle.ac.uk" },
    { name = "Richard Hayes", email = "richard@rghsoftware.co.uk" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
keywords = ["cli"]
dependencies = [
    "autoconf",
    "astropy>=5.0,<=6.1.2",
    "decorator>=4.0.0",
    "dill>=0.3.1.1",
    "jax==0.4.28",
    "jaxlib==0.4.28",
    "jaxnnls==1.0.1",
    "matplotlib>=3.7.0",
    "scipy<=1.14.0",
    "scikit-image<=0.24.0",
    "scikit-learn<=1.5.1"
]

[project.urls]
Homepage = "https://github.com/Jammy2211/PyAutoArray"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "test_autoarray", "test_autoarray*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"


[project.optional-dependencies]
optional=[
    "numba",
    "pynufft"
]
test = ["pytest"]
dev = ["pytest", "black"]

[tool.pytest.ini_options]
testpaths = ["test_autoarray"]